<resources>
    <string name="app_name">Spending Control</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="TandC">I agree to the terms and condition of the AppCompany</string>
    <string name="error_view">Error View</string>
    <string name="password">Password</string>
    <string name="email_hint">user@domain.com</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_verify_again">Send Verify Email Again</string>
    <string name="enterEmailId">Enter the registered Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="expense_amount">Expense amount</string>
    <string name="expense_date">Expense date</string>
    <string name="description">Description</string>
    <string name="save_expense">Save expense</string>
    <string name="select_date">Select Date</string>
    <string name="account_balance">Account Balance</string>
    <string name="zero_balance">0.00</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="currency">$ </string>
    <string name="full_name">Full Name</string>
    <string name="logo">Logo</string>
</resources>