<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ui.auth.SignUpActivity">


    <ImageView
        android:id="@+id/imageViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/ic_baseline_monetization_on_24" />

    <EditText
        android:id="@+id/signUpDisplayNameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/signUpEmailTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/signUpPasswordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <CheckBox
        android:id="@+id/agreementCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TandC" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/signUpErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_view" />


</LinearLayout>
