<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ui.auth.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            app:srcCompat="@drawable/ic_baseline_monetization_on_24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Putting you in the control of what matters"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/signInEmailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/signInPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sign_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signUpButtom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:backgroundTint="#009688"
                android:paddingStart="60dp"
                android:paddingRight="60dp"
                android:text="Sign Up" />

            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:visibility="invisible" />

        </LinearLayout>

        <TextView
            android:id="@+id/signInErrorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_view"
            android:visibility="invisible" />

        <Button
            android:id="@+id/verifyEmailAgainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_verify_again"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>
