<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submitExpense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.expense.ExpenseFragment">

    <EditText
        android:id="@+id/expenseAmount"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/expense_amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/expenseCreatedAt"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/expense_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseAmount" />

    <Spinner
        android:id="@+id/expenseCategory"
        android:layout_width="363dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseCreatedAt" />

    <EditText
        android:id="@+id/expenseDescription"
        android:layout_width="368dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseCategory" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSubmitExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/expense_color"
        android:clickable="true"
        android:contentDescription="@string/save_expense"
        android:foreground="@drawable/baseline_check_24"
        android:foregroundGravity="center"
        android:tint="@color/white"
        app:backgroundTint="@color/expense_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>